--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 ### IntelliJ IDEA ###
+.idea
 out/
+src/META-INF
 !**/src/main/**/out/
 !**/src/test/**/out/
 
@@ -28,5 +30,6 @@ bin/
 ### Mac OS ###
 .DS_Store
 
-# Ignoriere die ToDo-App Speicherdatei
+
 todoapp_savefile.txt
+.gitignore
